@@ -1,8 +1,10 @@
-Stacks 2.0 
+Stacks 2.0 Beta 8
 --------------------------------
     Feature: populations: Now calculated deviation from Hardy-Weinberg equilibrium at the SNP level
              (using an exact test), and at the haplotype level (using Guo+Thompson's MCMC algorithm).
-    Feature: populations: added an export type for FineRADStructure. 
+    Feature: populations: added an export type for FineRADStructure.
+    Bugfix:  corrected a major performance bottleneck in populations when smoothing population statistics
+             across the genome.
 
 Stacks 2.0 Beta 7 - Dec 29, 2017
 --------------------------------
